--- a/ui5-deploy.yaml
+++ b/ui5-deploy.yaml
@@ -1,5 +1,3 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: hodek.vendorportal
@@ -16,10 +14,10 @@ builder:
         target:
           destination: CONNECT_DEV080
           url: https://my426294.s4hana.cloud.sap
-          authenticationType: reentranceTicket # SAML support for vscode
+          authenticationType: reentranceTicket
         app:
           name: ZVENDORPORTAL
           package: ZMM_VENDOR_PORTAL
-          transport: TMOK900202
+          transport: TMOK900978
         exclude:
           - /test/
